# character-recognition

./: .gitignore  CMakeLists.txt  README.md
src/: Grid.cpp  Grid.h  MnistLoader.cpp  MnistLoader.h  MnistNetwork.cpp  MnistNetwork.h  main.cpp
src/Math/: Matrix.cpp  Matrix.h
